 # contents of a minimal pyproject.toml
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "example_package_saileesawant"
dynamic = ["version"]
dependencies = ["numpy"]

 # In pyproject.toml
 
[project.optional-dependencies]
test = ["pytest"]

[tool.hatch]
version.path = "src/example_package_saileesawant/__init__.py"